# PSQL_to_RS

./: README.md
psql_to_redshift/: Makefile  pyproject.toml
psql_to_redshift/infrastructure/: del_redshift.yml  docker-compose-postgres.yaml  init_table.sql  init_table_rs.sql  psql.Dockerfile  redshift.yml
psql_to_redshift/infrastructure/env/: psql.env
psql_to_redshift/infrastructure/vars/: rs_vars.yaml
psql_to_redshift/src/: load_data.py  migrate_to_redshift.py  to_s3.py
psql_to_redshift/tests/: test_psql_to_redshift.py
